calculator modal page, calculator sidebar, currency-sidebar top with all JS functionality

--- a/contact.html
+++ b/contact.html
@@ -75,18 +75,24 @@
           >
             <ul class="navbar-nav m-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html"
+                <a class="nav-link" aria-current="page" href="index.html"
                   >home</a
                 >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">about</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="feature.html">feature</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="blog.html">blog</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="faq.html">faq</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="story.html">story</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link active" href="contact.html">Contact</a>
               </li>
             </ul>
           </div>
@@ -250,9 +256,8 @@
       <div class="banner-section-inner">
         <div class="container">
           <div class="row">
-            <div class="col">
-              <div class="breadcrumb-area text-center">
-                <h3>contact us</h3>
+            <div class="col-6">
+              <div class="breadcrumb-area">
                 <ul class="breadcrumb">
                   <li class="breadcrumb-item">
                     <a href="index.html"
@@ -260,10 +265,13 @@
                     >
                   </li>
                   <li class="breadcrumb-item active" aria-current="page">
-                    contact us
+                    contact
                   </li>
                 </ul>
               </div>
+            </div>
+            <div class="col-6 text-end">
+              <h4 class="mb-0">Contact</h4>
             </div>
           </div>
         </div>
@@ -380,7 +388,8 @@
                   </div>
                   <div class="btn-area d-flex justify-content-end">
                     <button type="submit" class="cmn-btn w-100">
-                      <span>Send a massage</span>
+                      <span class="text-box">Send a massage</span>
+                      <i class="fa-regular fa-angle-right"></i>
                     </button>
                   </div>
                 </form>
