--- a/login.html
+++ b/login.html
@@ -80,10 +80,16 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="faq.html">faq</a>
+                <a class="nav-link" href="about.html">about</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="story.html">story</a>
+                <a class="nav-link" href="feature.html">feature</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="blog.html">blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="faq.html">faq</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
@@ -250,9 +256,8 @@
       <div class="banner-section-inner">
         <div class="container">
           <div class="row">
-            <div class="col">
-              <div class="breadcrumb-area text-center">
-                <h3>Login</h3>
+            <div class="col-6">
+              <div class="breadcrumb-area">
                 <ul class="breadcrumb">
                   <li class="breadcrumb-item">
                     <a href="index.html"
@@ -264,6 +269,9 @@
                   </li>
                 </ul>
               </div>
+            </div>
+            <div class="col-6 text-end">
+              <h4 class="mb-0">Login</h4>
             </div>
           </div>
         </div>
@@ -352,7 +360,8 @@
                   </div>
                 </div>
                 <button type="submit" class="cmn-btn mt-30 w-100">
-                  <span>Log In</span>
+                  <span class="text-box">Log In</span>
+                  <i class="fa-regular fa-angle-right"></i>
                 </button>
 
                 <div class="pt-20 text-center">
