--- a/register.html
+++ b/register.html
@@ -252,9 +252,8 @@
       <div class="banner-section-inner">
         <div class="container">
           <div class="row">
-            <div class="col">
-              <div class="breadcrumb-area text-center">
-                <h3>Login</h3>
+            <div class="col-6">
+              <div class="breadcrumb-area">
                 <ul class="breadcrumb">
                   <li class="breadcrumb-item">
                     <a href="index.html"
@@ -262,10 +261,13 @@
                     >
                   </li>
                   <li class="breadcrumb-item active" aria-current="page">
-                    Login
+                    Register
                   </li>
                 </ul>
               </div>
+            </div>
+            <div class="col-6 text-end">
+              <h4 class="mb-0">Register</h4>
             </div>
           </div>
         </div>
@@ -396,7 +398,10 @@
                   </div>
                 </div>
                 <button type="submit" class="cmn-btn mt-30 w-100">
-                  <span>signup</span>
+                  <span class="text-box">
+                    signup
+                  </span>
+                  <i class="fa-regular fa-angle-right"></i>
                 </button>
                 <div class="pt-20 text-center">
                   Don't have an account?
