--- a/trip-details-itinerary.html
+++ b/trip-details-itinerary.html
@@ -4066,7 +4066,7 @@
         const productBoxs = document.querySelectorAll(
           ".addPlaceOffcanvas .product-box4"
         );
-        productBoxs.forEach((productBox) => {
+        productBoxs.forEach(productBox) => {
           productBox.addEventListener("click", () => {
             productBoxs.forEach((productBox) =>
               productBox.classList.remove("active")
