--- a/feature.html
+++ b/feature.html
@@ -251,6 +251,34 @@
     </ul>
     <!-- Bottom Mobile Tab nav section end -->
 
+    <!-- Banner section start -->
+    <div class="banner-section">
+      <div class="banner-section-inner">
+        <div class="container">
+          <div class="row">
+            <div class="col-6">
+              <div class="breadcrumb-area">
+                <ul class="breadcrumb">
+                  <li class="breadcrumb-item">
+                    <a href="index.html"
+                      ><i class="fa-light fa-house"></i> Home</a
+                    >
+                  </li>
+                  <li class="breadcrumb-item active" aria-current="page">
+                    Feature
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-6 text-end">
+              <h4 class="mb-0">Feature</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Banner section end -->
+
     <!-- Feature section start -->
     <section class="feature-section">
       <div class="container">
