--- a/supported-token.html
+++ b/supported-token.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
 
-  <body onload="preloaderFunction()" class="">
+  <body onload="preloaderFunction()" class="rtl">
     <!-- Preloader section start -->
     <div id="preloader">
       <div class="loader"></div>
@@ -356,7 +356,7 @@
                   <div class="supported-token-list-header">
                     <div class="item">Symbol</div>
                     <div class="item">Name</div>
-                    <div class="item text-end">Network</div>
+                    <div class="item">Network</div>
                   </div>
                   <div class="supported-token-list-body">
                     <div class="item-box">
@@ -540,7 +540,7 @@
                   <div class="supported-token-list-header">
                     <div class="item">Symbol</div>
                     <div class="item">Name</div>
-                    <div class="item text-end">Network</div>
+                    <div class="item">Network</div>
                   </div>
                   <div class="supported-token-list-body">
                     <div class="item-box">
@@ -724,7 +724,7 @@
                   <div class="supported-token-list-header">
                     <div class="item">Country</div>
                     <div class="item">Currency</div>
-                    <div class="item text-end">Transact</div>
+                    <div class="item">Transact</div>
                   </div>
                   <div class="supported-token-list-body">
                     <div class="item-box align-items-center border-0">
